@@ -46,6 +46,7 @@ opts = OptionParser.new do |opts|
   opts.on("-g", "--group NAME", "Group to run daemon as (use with -u)")           { |group| options[:group] = group }
   opts.on(      "--prefix PATH", "Mount the app under PATH (start with /)")       { |path| options[:prefix] = path }
   opts.on("-C", "--config PATH", "Load option from a config file")                { |file| options[:config] = file }
+  opts.on(      "--stats", "Install the Stats adapter at /stats")                 { options[:stats] = true }
   
   opts.separator ""
   opts.separator "Common options:"
@@ -93,6 +94,9 @@ def start(options)
     
     # If a prefix is required, wrap in Rack URL mapper
     server.app = Rack::URLMap.new(options[:prefix] => server.app) if options[:prefix]
+    
+    # If a stats are required, wrap in Stats adapter
+    server.app = Thin::Stats::Adapter.new(server.app) if options[:stats]
     
     server.start!
   end  
